# share-me

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.s3.yml  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: cli-publish.yml  codeql.yml  docker-publish.yml
apps/api/: .dockerignore  Cargo.toml  Dockerfile
apps/api/migrations/postgres/: 0001_init.sql  0002_unlock_at.sql
apps/api/migrations/sqlite/: 0001_init.sql  0002_unlock_at.sql
apps/api/src/: config.rs  error.rs  lib.rs  main.rs  storage.rs  tokens.rs  worker.rs
apps/api/src/db/: mod.rs  models.rs  queries.rs
apps/api/src/routes/: download.rs  mod.rs  uploads.rs
apps/api/tests/: config_test.rs  db_basic_test.rs  health_test.rs  meta_test.rs  resume_test.rs  slot_atomicity_test.rs  storage_local_test.rs  storage_s3_minio_test.rs  unlock_at_test.rs  upload_download_test.rs  worker_test.rs
apps/api/tests/common/: mod.rs
apps/web/: Dockerfile  next.config.ts  package.json  proxy.ts
apps/web/app/: AppShell.tsx  components.css  fonts.ts  globals.css  icons.tsx  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  seo.ts  sitemap.ts  toast.tsx
apps/web/app/components/: DateTimePicker.tsx  DonateModal.tsx  FormattedText.tsx  History.tsx  HowItWorks.tsx  PreviewLightbox.tsx  Thumb.tsx
apps/web/app/i18n/: dict.ts  en.tsx  ru.tsx  server.ts  useI18n.tsx  zh.tsx
apps/web/app/lib/: actions.ts  argon2.worker.ts  blob-download.ts  blob-upload.ts  drop-service.test.ts  zip.ts  (+11 more)
infra/traefik/: render-traefik.sh
(+5 files in other folders)
